--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -11,7 +11,11 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="10 10 0 0" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <StackPanel
+            Margin="10 10 0 0"
+            Orientation="Vertical" 
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left">
             <Border 
                 Margin="10"
                 Height="200"
@@ -21,18 +25,28 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0"
+                                Direction="0"
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel
+                        Orientation="Vertical"
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="РЕЗУЛЬТАТ"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                            <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel
+                            Margin="10"
+                            Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel 
+                                Margin="0 0 0 3.5"
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
                                     Text="Последнее сканирование было произведено:"
@@ -104,7 +118,9 @@
                                     x:Name="DurationScanTextBlock2"
                                     Margin="2 0 0 0"/>
                             </StackPanel>
-                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <StackPanel 
+                                Margin="0 3.5 0 0"
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
                                     Text="Сканирование:"
@@ -112,7 +128,9 @@
                                 <TextBlock
                                     Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="2 0 0 0">
-                                    <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                    <StackPanel
+                                        VerticalAlignment="Center"
+                                        Orientation="Horizontal">
                                         <TextBlock x:Name="FilesAtTimeScanningTextBlock" Text="591"/>
                                         <TextBlock Text=" / "/>
                                         <TextBlock Text="591"/>
@@ -132,17 +150,27 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0"
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel 
+                        Orientation="Vertical"
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Ошибки"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel 
+                            VerticalAlignment="Center" 
+                            HorizontalAlignment="Center"
+                            Margin="10" 
+                            Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock
                                 x:Name="TitleErrorTextBlock"
                                 Style="{DynamicResource MainStyleTextBlock}"
@@ -169,7 +197,10 @@
             Grid.Column="1"
             VerticalAlignment="Top"
             HorizontalAlignment="Center">
-            <Grid VerticalAlignment="Top" Height="400" Margin="10 0 10 0">
+            <Grid 
+                VerticalAlignment="Top" 
+                Height="400" 
+                Margin="10 0 10 0">
                 <TextBlock
                     x:Name="ProgressScanTextBlock"
                     Visibility="Visible"
@@ -197,7 +228,7 @@
                             BlurRadius="30"
                             ShadowDepth="2"
                             Direction="-90"
-                            Color="#f5f5f5"/>
+                            Color="{StaticResource NeonHighlightingColor}"/>
                     </Ellipse.Effect>
                 </Ellipse>
                 <Ellipse 
@@ -227,7 +258,7 @@
                             BlurRadius="30"
                             ShadowDepth="2"
                             Direction="-90"
-                            Color="#f5f5f5"/>
+                            Color="{StaticResource NeonHighlightingColor}"/>
                     </Ellipse.Effect>
                 </Ellipse>
                 <Ellipse 
