--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
@@ -11,7 +11,10 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="10 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <StackPanel 
+            Margin="10 10 0 0"
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left">
             <Border
                 Margin="10"
                 Visibility="Visible"
@@ -19,7 +22,11 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect
+                                Color="{StaticResource NeonHighlightingColor}"
+                                ShadowDepth="0"
+                                Direction="0"
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
                     <Border
@@ -46,8 +53,12 @@
                             </TextBlock.Foreground>
                         </TextBlock>
                     </Border>
-                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                    <StackPanel 
+                        Margin="10" 
+                        Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel 
+                            Margin="0 0 0 3.5"
+                            Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource MainStyleTextBlock}"
                                 Text="Версия обновления:"
@@ -77,7 +88,10 @@
                                 Text="Это не баг, это фича"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
-                        <StackPanel Margin="0 20 0 0" Orientation="Vertical" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel 
+                            Margin="0 20 0 0" 
+                            Orientation="Vertical" 
+                            Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
                                 HorizontalAlignment="Left"
                                 Style="{DynamicResource MainStyleTextBlock}"
@@ -98,11 +112,19 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0"
+                                Direction="0"
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                    <StackPanel 
+                        Margin="10"
+                        Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel 
+                            Margin="0 0 0 3.5" 
+                            Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource MainStyleTextBlock}"
                                 Text="Версия обновления:"
@@ -142,11 +164,19 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0" 
+                                Direction="0"
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                    <StackPanel 
+                        Margin="10"
+                        Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel
+                            Margin="0 0 0 3.5"
+                            Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource MainStyleTextBlock}"
                                 Text="Версия обновления:"
@@ -186,11 +216,19 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                    <StackPanel 
+                        Margin="10" 
+                        Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel 
+                            Margin="0 0 0 3.5"
+                            Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource MainStyleTextBlock}"
                                 Text="Версия обновления:"
@@ -229,7 +267,10 @@
             Grid.Column="1"
             VerticalAlignment="Top"
             HorizontalAlignment="Center">
-            <Grid VerticalAlignment="Top" Height="400" Margin="10 0 10 0">
+            <Grid 
+                VerticalAlignment="Top"
+                Height="400"
+                Margin="10 0 10 0">
                 <TextBlock
                     x:Name="ProgressScanTextBlock"
                     Visibility="Visible"
@@ -257,7 +298,7 @@
                             BlurRadius="30"
                             ShadowDepth="2"
                             Direction="-90"
-                            Color="#f5f5f5"/>
+                            Color="{StaticResource NeonHighlightingColor}"/>
                     </Ellipse.Effect>
                 </Ellipse>
                 <Ellipse 
@@ -287,7 +328,7 @@
                             BlurRadius="30"
                             ShadowDepth="2"
                             Direction="-90"
-                            Color="#f5f5f5"/>
+                            Color="{StaticResource NeonHighlightingColor}"/>
                     </Ellipse.Effect>
                 </Ellipse>
                 <Ellipse 
@@ -316,7 +357,9 @@
                     Margin="0 0 0 0"
                     Height="40"/>
             </Grid>
-            <StackPanel Margin="10" VerticalAlignment="Bottom">
+            <StackPanel 
+                Margin="10"
+                VerticalAlignment="Bottom">
                 <Border
                     x:Name="IndoVersionTodayBorder"
                     Width="350"
@@ -333,10 +376,16 @@
                                 </LinearGradientBrush>
                             </Border.BorderBrush>
                             <Border.Effect>
-                                <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                                <DropShadowEffect 
+                                    Color="{StaticResource NeonHighlightingColor}"
+                                    ShadowDepth="0"
+                                    Direction="0"
+                                    BlurRadius="25"/>
                             </Border.Effect>
                         </Border>
-                        <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel 
+                            Margin="10" 
+                            Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Width="320"
@@ -364,11 +413,19 @@
                     <Grid>
                         <Border Style="{DynamicResource NeonBorder}">
                             <Border.Effect>
-                                <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                                <DropShadowEffect 
+                                    Color="{StaticResource NeonHighlightingColor}" 
+                                    ShadowDepth="0" 
+                                    Direction="0" 
+                                    BlurRadius="25"/>
                             </Border.Effect>
                         </Border>
-                        <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
-                            <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel 
+                            Margin="10" 
+                            Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel
+                                Margin="0 0 0 3.5"
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
                                     Text="Когда проверялось:"
