--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/GeneralInformationWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/GeneralInformationWorkerPage.xaml
@@ -8,26 +8,43 @@
     mc:Ignorable="d" 
     IsVisibleChanged="Page_IsVisibleChanged"
     Style="{DynamicResource BodySpacePageStyle}">
-    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
-        <StackPanel Orientation="Vertical" Margin="10">
+    <StackPanel 
+        VerticalAlignment="Center" 
+        HorizontalAlignment="Center"
+        Orientation="Horizontal">
+        <StackPanel
+            Orientation="Vertical"
+            Margin="10">
             <Border
                 Visibility="Visible"
                 Style="{DynamicResource BorderInformation}">
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect
+                                Color="{StaticResource NeonHighlightingColor}"
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel 
+                        Orientation="Vertical" 
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Информация по онлайну"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
-                            <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel 
+                            Margin="10" 
+                            Orientation="Vertical"
+                            VerticalAlignment="Top" 
+                            HorizontalAlignment="Left">
+                            <StackPanel 
+                                Margin="0 0 0 3.5" 
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Всего:"
@@ -47,7 +64,9 @@
                                     x:Name="TotalOnlineWorkerTextBlock"
                                     Style="{DynamicResource OtherStyleTextBlock}"/>
                             </StackPanel>
-                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <StackPanel 
+                                Margin="0 3.5 0 0" 
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Offline:"
@@ -61,22 +80,36 @@
                     </StackPanel>
                 </Grid>
             </Border>
-            <Border Visibility="Visible" Style="{DynamicResource BorderInformation}">
+            <Border 
+                Visibility="Visible"
+                Style="{DynamicResource BorderInformation}">
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel 
+                        Orientation="Vertical" 
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Информация по гендеру"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel Margin="10" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
-                            <StackPanel Margin="0 0 7 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel 
+                            Margin="10" 
+                            Orientation="Horizontal"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Left">
+                            <StackPanel
+                                Margin="0 0 7 0" 
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Мужчин:"
@@ -86,7 +119,9 @@
                                     Margin="3.5 0 0 0"
                                     Style="{DynamicResource OtherStyleTextBlock}"/>
                             </StackPanel>
-                            <StackPanel Margin="7 0 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <StackPanel
+                                Margin="7 0 0 0" 
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Женщин:"
@@ -100,22 +135,36 @@
                     </StackPanel>
                 </Grid>
             </Border>
-            <Border Visibility="Visible" Style="{DynamicResource BorderInformation}">
+            <Border 
+                Visibility="Visible" 
+                Style="{DynamicResource BorderInformation}">
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel
+                        Orientation="Vertical" 
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Информация по должности"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
-                        <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
-                            <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                        <StackPanel
+                            Margin="10" 
+                            Orientation="Vertical" 
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Left">
+                            <StackPanel
+                                Margin="0 0 0 3.5"
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Программист:"
@@ -155,7 +204,9 @@
                                     Margin="3.5 0 0 0"
                                     Style="{DynamicResource OtherStyleTextBlock}"/>
                             </StackPanel>
-                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <StackPanel
+                                Margin="0 3.5 0 0"
+                                Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Margin="0 0 3.5 0"
                                     Text="Директор:"
@@ -170,7 +221,9 @@
                 </Grid>
             </Border>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Margin="10">
+        <StackPanel
+            Orientation="Vertical" 
+            Margin="10">
             <Border 
                 MaxHeight="350" 
                 MinHeight="0"
@@ -180,10 +233,16 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}" 
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel 
+                        Orientation="Vertical" 
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Сегодня день рождение"
@@ -212,10 +271,16 @@
                 <Grid>
                     <Border Style="{DynamicResource NeonBorder}">
                         <Border.Effect>
-                            <DropShadowEffect Color="#f5f5f5" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                            <DropShadowEffect 
+                                Color="{StaticResource NeonHighlightingColor}"
+                                ShadowDepth="0" 
+                                Direction="0" 
+                                BlurRadius="25"/>
                         </Border.Effect>
                     </Border>
-                    <StackPanel Orientation="Vertical" Margin="10">
+                    <StackPanel
+                        Orientation="Vertical" 
+                        Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
                             Text="Скоро день рождение"
