--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
@@ -15,7 +15,10 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <Grid HorizontalAlignment="Left" Width="520" Margin="10 0 0 0">
+            <Grid 
+                HorizontalAlignment="Left"
+                Width="520" 
+                Margin="10 0 0 0">
                 <Border Style="{DynamicResource ShadowBorder}">
                     <Border.Effect>
                         <DropShadowEffect 
@@ -42,14 +45,20 @@
                     Text="Поиск"
                     Style="{DynamicResource HintTextBlockStyle}"/>
             </Grid>
-            <StackPanel Margin="0 0 10 0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
+            <StackPanel 
+                Margin="0 0 10 0"
+                Orientation="Horizontal"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right">
                 <Button
                     x:Name="EditButton"
                     Click="ActionEditWorker"
                     Width="220"
                     Height="45"
                     Margin="0 0 5 0">
-                    <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
+                    <StackPanel
+                        Margin="0 2 0 2" 
+                        Orientation="Horizontal">
                         <TextBlock
                             Text="&#xf158;" 
                             Style="{DynamicResource IconTextBlockStyle}"
