--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -57,7 +57,10 @@
             </Grid>
             <Grid Grid.Row="1">
                 <Grid>
-                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <StackPanel 
+                        Orientation="Vertical"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
                         <TextBlock
                             Text="HTRE"
                             Margin="0 0 0 0"
@@ -66,7 +69,7 @@
                             FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint">
                             <TextBlock.Foreground>
                                 <LinearGradientBrush EndPoint="0.45,1" StartPoint="0.5,0">
-                                    <GradientStop Color="#f5f5f5"/>
+                                    <GradientStop Color="{StaticResource NeonHighlightingColor}"/>
                                     <GradientStop Color="#462AD8" Offset="1"/>
                                 </LinearGradientBrush>
                             </TextBlock.Foreground>
@@ -105,7 +108,9 @@
                                 Text="LOGIN"
                                 Style="{DynamicResource HintTextBlockStyle}"/>
                         </Grid>
-                        <StackPanel Orientation="Vertical" Margin="0 10 0 5">
+                        <StackPanel
+                            Orientation="Vertical"
+                            Margin="0 10 0 5">
                             <Grid>
                                 <Border Style="{DynamicResource ShadowBorder}">
                                     <Border.Effect>
@@ -135,7 +140,9 @@
                                         Text="PASSWORD"
                                         Style="{DynamicResource HintTextBlockStyle}"/>
                                 </Grid>
-                                <Grid Visibility="Collapsed" x:Name="TextPasswordGrid">
+                                <Grid 
+                                    Visibility="Collapsed"
+                                    x:Name="TextPasswordGrid">
                                     <Border Style="{DynamicResource ShadowBorder}">
                                         <Border.Effect>
                                             <DropShadowEffect 
@@ -178,8 +185,13 @@
                                 Text="CapsLock"
                                 Style="{StaticResource HintTextBlockStyle}"/>
                         </StackPanel>
-                        <Grid HorizontalAlignment="Right" Margin="0 5 0 10">
-                            <Border Height="28" Width="158" Style="{DynamicResource ShadowBorder}">
+                        <Grid 
+                            HorizontalAlignment="Right" 
+                            Margin="0 5 0 10">
+                            <Border
+                                Height="28" 
+                                Width="158" 
+                                Style="{DynamicResource ShadowBorder}">
                                 <Border.Effect>
                                     <DropShadowEffect 
                                         Direction="315"
