--- a/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
@@ -1,13 +1,27 @@
 ﻿<!--В данном файле находится код привязки цвета-->
-    
+<!--Пока используется только ShadowColor и NeonHighlightingColor-->
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <!--#region Color-->
     <Color x:Key="ShadowColor">#000000</Color>
     <Color x:Key="NeonHighlightingColor">#f5f5f5</Color>
 
+    <Color x:Key="ForTextColor">#f5f5f5</Color>
+    <Color x:Key="ShadeForTextColor">#8c8a8c</Color>
+
+    <Color x:Key="BackgroundWindowColor">#121212</Color>
+    <Color x:Key="BackgroundStrokeWindowColor">#2a2a2a</Color>
+
+    <Color x:Key="BackgroundColorPage">#00000000</Color>
+    <Color x:Key="BackgroundStrokeWindowPageColor">#00000000</Color>
+
+    <Color x:Key="GeneralColor">#462AD8</Color>
+    <Color x:Key="ShadeGeneralColor0">#3e25c0</Color>
+    <Color x:Key="ShadeGeneralColor1">#2e1c90</Color>
+    <!--#endregion-->
+    <!--#region SolidColorBrush-->
     <SolidColorBrush x:Key="ShadowSolidColorBrush" Color="{DynamicResource ShadowColor}"/>
     <SolidColorBrush x:Key="NeonHighlightingColorBrush" Color="{DynamicResource ShadowColor}"/>
-    
+    <!--#endregion-->
 </ResourceDictionary>
