--- a/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
@@ -7,8 +7,8 @@
     <Color x:Key="ShadowColor">#000000</Color>
     <Color x:Key="NeonHighlightingColor">#f5f5f5</Color>
 
-    <Color x:Key="ForTextColor">#f5f5f5</Color>
-    <Color x:Key="ShadeForTextColor">#8c8a8c</Color>
+    <Color x:Key="TextColor">#f5f5f5</Color>
+    <Color x:Key="ShadeTextColor">#8c8a8c</Color>
 
     <Color x:Key="BackgroundWindowColor">#121212</Color>
     <Color x:Key="BackgroundStrokeWindowColor">#2a2a2a</Color>
@@ -22,6 +22,6 @@
     <!--#endregion-->
     <!--#region SolidColorBrush-->
     <SolidColorBrush x:Key="ShadowSolidColorBrush" Color="{DynamicResource ShadowColor}"/>
-    <SolidColorBrush x:Key="NeonHighlightingColorBrush" Color="{DynamicResource ShadowColor}"/>
+    <SolidColorBrush x:Key="NeonHighlightingColorBrush" Color="{DynamicResource NeonHighlightingColor}"/>
     <!--#endregion-->
 </ResourceDictionary>
